[tool.poetry]
name = "reurl-project"
version = "0.1.0"
description = ":)"
authors = ["MDSK <oacgodkl21@gmail.com>"]
readme = "README.md"
packages = [{include = "reurl_project"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
